hphp/test/zend/good/tests/classes/private_001.php.expectf
Call show()

Fatal error: Call to private pass::show() from invalid context in %s/private_001.php on line 14
